@@ -4,11 +4,12 @@
 \description{Makes a function you can use to specify the location of each group
 independently.}
 \usage{
-dl.indep(expr)
+dl.indep(expr, ...)
 }
 \arguments{
   \item{expr}{Expression that takes a subset of the d data frame, with data from
 only a single group, and returns the direct label position.}
+  \item{\dots}{variables to store for access to code in expr.}
 }
 
 \value{A Positioning Function.}
