@@ -1,7 +1,7 @@
 \name{extreme.points}
 \alias{extreme.points}
 \title{extreme points}
-\description{Label the points furthest from the origin for each group.}
+\description{Label the points furthest from the middle for each group.}
 \usage{
 extreme.points(d, ...)
 }
