@@ -1,0 +1,22 @@
+\name{gapply}
+\alias{gapply}
+\title{gapply}
+
+\usage{
+gapply(d, ...)
+}
+\arguments{
+  \item{d}{
+}
+  \item{\dots}{
+}
+}
+
+
+
+\author{Toby Dylan Hocking <toby.hocking@inria.fr>}
+
+
+
+
+
