@@ -1,0 +1,20 @@
+\name{midrange}
+\alias{midrange}
+\title{midrange}
+\description{Point halfway between the min and max}
+\usage{
+midrange(x)
+}
+\arguments{
+  \item{x}{
+}
+}
+
+
+
+\author{Toby Dylan Hocking <toby.hocking@inria.fr>}
+
+
+
+
+
